bm: restyled homepage navbar, commented distortion fix

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -2,6 +2,16 @@
   height: 100%;
 }
 
+@media (max-width: 576px) {
+  .soc-link {
+    display: none!important;
+  }
+  .nav-n-soc-links {
+    margin: auto!important;
+    width: 100vw;
+  }
+}
+
 @media (min-width: 740px) and (max-width: 759px) {
   .view {
     height: 1000px!important;
@@ -21,7 +31,7 @@
 }
 
 /* distortion between this viewports */
-@media (min-width: 760px) and (max-width: 767px) {
+/* @media (min-width: 760px) and (max-width: 767px) {
   .intro-box {
     margin: 8rem 1rem 1rem 1rem;
     height: fit-content!important;
@@ -33,7 +43,7 @@
   .view {
     height: 840px !important;
   }
-}
+} */
 
 /* my styles */
 .navbar-brand {
